# LilGuy

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.sh  compile_commands.json
src/: debug.c  debug.h  list.c  list.h  logging.c  logging.h  main.c  math_helpers.c  math_helpers.h  memory_s.c  memory_s.h  random.h  raylib_wrapper.c  raylib_wrapper.h  raymath_wrapper.c  raymath_wrapper.h  rect.h  result.h  screen_capture.c  screen_capture.h  short_types.h  timer.c  timer.h  tween.c  tween.h  twine.c  twine.h  vector2.c  vector2.h
src/graphics/: color.h  deferred_rendering.h  draw_order.h  graphics.c  graphics.h  graphics_context.h  graphics_transform.h  image.c  image.h  screen_capture.c  screen_capture.h  texture2d.h  texture_atlas.c  texture_atlas.h
src/input/: input.c  input.h  input_button.h  input_context.h
src/physics/: collider.c  collider.h  matrix.c  matrix.h  raycast.c  raycast.h  transform.h
src/scene/: animated_sprite_scene.c  animated_sprite_scene.h  block_scene.c  block_scene.h  collider_scene.c  collider_scene.h  empty_scene.c  empty_scene.h  main_char_bullet_scene.c  main_char_bullet_scene.h  main_char_eye_scene.c  main_char_eye_scene.h  main_char_eyes_scene.c  main_char_eyes_scene.h  main_char_foot_scene.c  main_char_foot_scene.h  main_char_gun_scene.c  main_char_gun_scene.h  main_char_hand_scene.c  main_char_hand_scene.h  main_char_jetpack_fire_scene.c  main_char_jetpack_fire_scene.h  main_char_scene.c  main_char_scene.h  main_scene.c  main_scene.h  raycast_scene.c  raycast_scene.h  scene.c  scene.h  scene_type.h  spring_arm_scene.c  spring_arm_scene.h  sprite_scene.c  sprite_scene.h  transform.h
src/window/: window.c  window.h  window_callbacks.h  window_context.h
src/window/graphics/: graphics.c  graphics.h  image.c  image.h
src/window/input/: input.c  input.h
